# n-puzzle

./: .all-contributorsrc  Cargo.toml  Dockerfile  LICENSE  README.md  clean-docker.sh  install-rust.sh  launch-docker.sh
maps/: hardcore  map0  map10  map11  map12  map3  map4  map5  map6  map7  map8  map9  map_linear_conflict_test  map_manual  map_subject_2  map_subject_3  map_test
src/: lib.rs  main.rs
src/algo/: graph.rs  heuristics.rs  mod.rs  search.rs
src/args/: handle.rs  mod.rs  parser.rs
src/board/: check.rs  create.rs  mod.rs  utils.rs
src/visual/: mod.rs  render.rs  text.rs  visu.rs
tests/: args_parser_test.rs  board_check_test.rs
