[package]
name = "npuzzle"
version = "0.1.0"
authors = ["Simon Galasso <simon.galasso@hotmail.fr>, Nicolas Vienot <nvienot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rulinalg = "0.4.2"
rand = "0.7.3"
clap = "2.33.3"
piston_window = "0.114.0"
piston2d-graphics = "0.37.0"
piston2d-opengl_graphics = "0.74.0"
find_folder = "0.3.0"